all from yesterday

--- a/wp1/Makefile
+++ b/wp1/Makefile
@@ -13,7 +13,8 @@ obj_dir/Vtop: obj_dir/Vtop.mk
 	$(MAKE) -j2 -C obj_dir/ -f Vtop.mk CXX="ccache g++"
 
 obj_dir/Vtop.mk: $(VFILES) $(CFILES) 
-	verilator -Wall -Wno-LITENDIAN -Wno-lint -O3 $(TRACE) --no-skip-identical --cc top.sv \
+	verilator -Wall -Wno-LITENDIAN -Wno-lint -O3 $(TRACE) --no-skip-identical --cc top.sv allModuleContent.sv \
+        --top-module top \
 	--exe $(CFILES) /shared/cse502/DRAMSim2/libdramsim.so \
 	-CFLAGS -I/shared/cse502 \
 	-LDFLAGS -Wl,-rpath=/shared/cse502/DRAMSim2 \
