--- a/wp1/Makefile
+++ b/wp1/Makefile
@@ -1,9 +1,6 @@
 .PHONY: all run clean submit
 
-RUNELF= /shared/cse502/tests/project/prog1
-# /home/yeslee/merging/architecture/wp1/branch_test.o
-
-#/shared/cse502/tests/wp2/prog3.o
+RUNELF= /shared/cse502/tests/wp2/prog3.o
 
 TRACE?=--trace
 HAVETLB=n
