--- a/wp1/Makefile
+++ b/wp1/Makefile
@@ -1,6 +1,6 @@
 .PHONY: all run clean submit
 
-RUNELF= /shared/cse502/tests/wp2/prog3.o
+RUNELF= /shared/cse502/tests/project/prog1
 
 TRACE?=--trace
 HAVETLB=n
